# cmake-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md
application/: CMakeLists.txt  main.cpp
moduleA/: CMakeLists.txt
moduleA/include/moduleA/: A.h
moduleA/src/: A.cpp
moduleA/test/: A_unittest.cpp
moduleB/: CMakeLists.txt
moduleB/include/moduleB/: B.h
moduleB/src/: B.cpp
moduleB/test/: B_unittest.cpp
